--- a/css/style.css
+++ b/css/style.css
@@ -60,10 +60,18 @@ nav {
   background: linear-gradient( rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.6) ), url(../img/green-material-design.png) 50% 0 no-repeat fixed;
   background-size: cover;
   overflow: hidden;
+  display: -webkit-box;
+  display: -moz-box;
+  display: -ms-flexbox;
+  display: -webkit-flex;
   display: flex;
 }
 
 .desc {
+  display: -webkit-box;
+  display: -moz-box;
+  display: -ms-flexbox;
+  display: -webkit-flex;
   display: flex;
   width: calc(75vw - 3rem);
   height: 45vh;
@@ -72,7 +80,7 @@ nav {
   color: white;
   padding: 1.5rem;
   border-radius: 8px;
-  background-color: rgb(117, 124, 135, 0.5);
+  background-color: rgba(117, 124, 135, 0.5);
 }
 
 .me {
@@ -87,6 +95,10 @@ nav {
 }
 
 .info-container {
+  display: -webkit-box;
+  display: -moz-box;
+  display: -ms-flexbox;
+  display: -webkit-flex;
   display: flex;
   flex-direction: column;
   height: 100%;
@@ -99,6 +111,10 @@ nav {
 
 .info-buttons-container {
   margin-top: auto;
+  display: -webkit-box;
+  display: -moz-box;
+  display: -ms-flexbox;
+  display: -webkit-flex;
   display: flex;
 }
 
