--- a/css/style.css
+++ b/css/style.css
@@ -84,7 +84,6 @@ nav {
 }
 
 .me {
-  margin-right: auto;
   border-radius: 100%;
   height: 100%;
   width: auto;
@@ -92,6 +91,7 @@ nav {
 
 .info {
   width: 45%;
+  margin-left: auto;
 }
 
 .info-container {
@@ -140,5 +140,58 @@ nav {
   header {
     padding-right: calc(50vw - 525px);
     padding-left: calc(50vw - 525px);
+  }
+}
+
+@media (max-width: 1000px) {
+  .me {
+    height: 90%;
+    margin-top: auto;
+    margin-bottom: auto;
+  }
+
+  .info {
+    width: 50%;
+    height: 90%;
+    margin-top: auto;
+    margin-bottom: auto;
+  }
+}
+
+@media (max-width: 914px) {
+  .me {
+    height: 80%;
+    margin-top: auto;
+    margin-bottom: auto;
+  }
+
+  .info {
+    width: 50%;
+    font-size: 0.85rem;
+    height: 80%;
+    margin-top: auto;
+    margin-bottom: auto;
+  }
+}
+
+@media (max-width: 847px) {
+  .info-buttons-container {
+    flex-direction: column;
+  }
+
+  .info-about {
+    margin-right: 0;
+    margin-bottom: 0.5rem;
+  }
+
+  .me {
+    height: 90%;
+  }
+
+  .info {
+    width: 40%;
+    height: 90%;
+    margin-top: auto;
+    margin-bottom: auto;
   }
 }
