--- a/css/style.css
+++ b/css/style.css
@@ -28,9 +28,8 @@
 
 body {
     font-family: 'Roboto', sans-serif;
-    display: flex;
-    height: 100vh;
     width: 100vw;
+    height: 100vh;
     overflow: hidden;
 }
 
@@ -175,6 +174,12 @@ body {
     padding-bottom: 0;
     background: white;
     border-radius: 5px;
+    height: 90px;
+}
+
+.navbar-brand {
+    font-weight: 900;
+    font-size: 24px;
 }
 
 .navbar.expanded {
@@ -211,22 +216,28 @@ body {
 
 /* End Navbar Responsive Styles */
 
+/* Center Page Box Slider Styles */
+.slider-container {
+    position: absolute;
+    margin: 0;
+    padding: 0;
+    width: 100%;
+    height: 100%;
+}
+
+/* End Center Page Box Slider Styles */
+
 /* Center Page Box Styles */
 .center-page-box {
     width: calc(100% - (2 * var(--uniform-padding) * 1px));
     max-width: calc(var(--center-box-max-width) * 1px);
-    margin: auto;
     box-shadow: 0px 0px 50px rgba(0, 0, 0, 0.1);
     border-radius: 5px;
     position: absolute;
-    left: 0;
-    right: 0;
+    left: 150%;
+    transform: translateX(-50%);
     max-height: calc(100% - (var(--navbar-total-height) * 1px) - (var(--uniform-padding) * 1px));
     overflow-y: auto;
-}
-
-.center-page-box:not(.active) {
-    display: none;
 }
 
 .center-page-box-info-container {
