--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,8 @@
 /* Variables */
 :root {
+    /* Colors */
+    --site-accent-color: #4F5BD5;
+
     /* Main Center Box Constants */
     --center-box-max-height: 500;
     --center-box-max-width: 800;
@@ -213,7 +216,7 @@ body {
 
 .navbar-nav .nav-item .nav-link.active,
 .navbar-nav .nav-item .nav-link:hover {
-    color: #C0C0C0 !important;
+    color: var(--site-accent-color) !important;
 }
 
 .navbar-collapse {
@@ -296,7 +299,7 @@ body {
 
 @media (max-width: 814px) {
     .center-page-box {
-        margin: 140px auto calc(var(--uniform-padding) * 1px) auto;
+        margin: calc(var(--navbar-total-height) * 1px) auto calc(var(--uniform-padding) * 1px) auto;
     }
 
     .center-page-box-info-container {
@@ -321,85 +324,129 @@ body {
 /* End Center Page Box Styles */
 
 /* Home Page Center Page Box Specific Styles */
-#about .me-img-container {
-    height: var(--me-img-pct-height);
-    text-align: center;
+#home .center-page-box-info {
+    align-items: baseline;
 }
 
-#about .me-img {
-    border-radius: 100%;
-    height: 100%;
-    width: auto;
+#home .large-home-text {
+    font-weight: 900;
+    font-size: 64px;
 }
 
-#about .name {
-    margin-bottom: 3px;
-    margin-top: 10px;
+#home .large-home-text span {
+    font-style: italic;
+    color: var(--site-accent-color);
 }
 
-#about .gender {
-    font-size: 14px;
-}
-
-#about .description {
-    font-size: 18px;
-    font-weight: 300;
-    text-align: center;
-    max-width: 75%;
-}
-
-#about .social-media {
-    display: flex;
-    margin: auto 0;
-}
-
-#about .social-media .social-icon {
-    margin: 0 7.5px;
-    height: 25px;
-    display: block;
-}
-
-#about .social-media .social-icon:hover img {
-    transform: scale(1.1);
-}
-
-#about .social-media .social-icon img {
-    height: 100%;
-    transition: all 0.1s linear;
-}
-
-#about .contact-me-button {
-    background: rgba(74, 130, 246, 1);
-    border-radius: 500px;
-    font-size: 18px;
-    line-height: 21px;
-    color: #FFFFFF;
-    text-decoration: none;
-    padding: 10px 26px;
+#home .home-button-grid {
     margin-top: auto;
+    display: flex;
+    flex-wrap: wrap;
+    width: 100%;
+}
+
+#home .home-button-grid a {
+    padding: 7px 30px;
+    color: white;
+    border-radius: 500px;
+    margin-right: 15px;
+    font-size: 18px;
+    text-decoration: none;
+    margin-top: 15px;
     transition: all 0.2s linear;
 }
 
-#about .contact-me-button:hover {
-    background: rgba(74, 130, 246, 0.8);
+#home .home-button-grid a:hover {
+    opacity: 0.8;
+}
+
+#home .home-button-grid a.quote {
+    background-color: var(--site-accent-color);
+}
+
+#home .home-button-grid a.insta {
+    background-color: #962FBF;
+}
+
+#home .home-button-grid a.linkedin {
+    background-color: #D62976;
+}
+
+#home .home-button-grid a.tiktok {
+    background-color: #FA7E1E;
 }
 
 /* End Home Page Center Page Box Specific Styles */
 
 /* Home Page Center Page Box Specific Responsive Styles */
-@media (max-width: 878px) {
-    #about .description {
-        max-width: 85%;
+@media (max-width: 814px) {
+    #home .home-button-grid {
+        margin-top: 8%;
     }
 }
 
-@media (max-width: 814px) {
-    #about .contact-me-button {
-        margin-top: 25px;
+@media (max-width: 695px) {
+    #home .large-home-text {
+        font-size: 50px;
     }
 
-    #about .me-img {
-        height: 158px;
+    #home .home-button-grid a {
+        font-size: 16px;
+        padding: 7px 20px;
+    }
+}
+
+@media (max-width: 589px) {
+    #home .large-home-text {
+        font-size: 40px;
+    }
+
+    #home .home-button-grid a {
+        font-size: 14px;
+        padding: 7px 20px;
+    }
+}
+
+@media (max-width: 563px) {
+    #home .home-button-grid {
+        justify-content: space-between;
+    }
+
+    #home .home-button-grid a {
+        font-size: 16px;
+        padding: 7px 20px;
+        margin-right: 0;
+    }
+
+    #home .home-button-grid a.quote {
+        width: 100%;
+        text-align: center;
+    }
+}
+
+@media (max-width: 487px) {
+    #home .large-home-text {
+        font-size: 30px;
+    }
+
+    #home .home-button-grid a {
+        font-size: 12px;
+        padding: 7px 15px;
+    }
+}
+
+@media (max-width: 405px) {
+    #home .large-home-text {
+        font-size: 25px;
+    }
+
+    #home .home-button-grid a {
+        font-size: 12px;
+        padding: 7px 15px;
+    }
+
+    #home .home-button-grid {
+        margin-top: 5%;
     }
 }
 
