--- a/css/style.css
+++ b/css/style.css
@@ -32,8 +32,11 @@
 html, body {
     font-family: 'Roboto', sans-serif;
     width: 100vw;
-    height: 100vh;
-    overflow: hidden;
+    height: 100%;
+    min-height: 100%;
+    box-sizing: border-box;
+    overflow-x: hidden;
+    overflow-y: hidden;
     position: fixed;
 }
 
