--- a/css/style.css
+++ b/css/style.css
@@ -32,11 +32,7 @@
 html, body {
     font-family: 'Roboto', sans-serif;
     width: 100vw;
-    height: 100%;
-    min-height: 100%;
-    box-sizing: border-box;
-    overflow-x: hidden;
-    overflow-y: hidden;
+    overflow: hidden;
     position: fixed;
 }
 
@@ -262,7 +258,7 @@ html, body {
     position: absolute;
     left: 150%;
     transform: translateX(-50%);
-    max-height: calc(100vh - (var(--navbar-total-height) * 1px) - (var(--uniform-padding) * 1px));
+    max-height: calc(100% - (var(--navbar-total-height) * 1px) - (var(--uniform-padding) * 1px));
     overflow-y: auto;
 }
 
