--- a/css/style.css
+++ b/css/style.css
@@ -32,6 +32,7 @@
 html, body {
     font-family: 'Roboto', sans-serif;
     width: 100vw;
+    height: 100%;
     overflow: hidden;
     position: fixed;
 }
@@ -670,6 +671,9 @@ html, body {
 #portfolio .tabs {
     margin-top: -41px;
     margin-bottom: 16px;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
 }
 
 #portfolio .tabs a {
@@ -677,7 +681,7 @@ html, body {
     color: #C0C0C0;
     font-weight: 900;
     font-size: 14px;
-    margin-right: 15px;
+    margin: 0 7.5px;
     transition: all 0.2s linear;
 }
 
