--- a/css/style.css
+++ b/css/style.css
@@ -1,8 +1,5 @@
 /* Variables */
 :root {
-    /* Colors */
-    --site-accent-color: #4F5BD5;
-
     /* Main Center Box Constants */
     --center-box-max-height: 500;
     --center-box-max-width: 800;
@@ -29,12 +26,12 @@
     --small-rectangular-box-pct-height: 12.5%;
 }
 
-html, body {
+body {
     font-family: 'Roboto', sans-serif;
     width: 100vw;
-    height: 100%;
-    overflow: hidden;
-    position: fixed;
+    height: 100vh;
+    position: relative;
+    overflow-x: hidden;
 }
 
 .title-text {
@@ -48,9 +45,8 @@ html, body {
 }
 
 .copyright {
-    width: 100%;
-    position: fixed;
-    bottom: 29px;
+    margin-top: 50px;
+    padding-bottom: 29px;
 }
 
 .copyright-text {
@@ -59,12 +55,6 @@ html, body {
     width: 100%;
     text-align: center;
     margin: 0;
-}
-
-@media (max-width: 814px) {
-    .copyright {
-        bottom: 17px;
-    }
 }
 
 /* Large Box Styles */
@@ -161,6 +151,15 @@ html, body {
     display: flex;
 }
 
+.small-box:hover {
+    transform: scale(1.05);
+}
+
+.small-box {
+    cursor: pointer;
+    transition: all 0.1s linear;
+}
+
 .small-box-img {
     height: 30px;
 }
@@ -217,7 +216,7 @@ html, body {
 
 .navbar-nav .nav-item .nav-link.active,
 .navbar-nav .nav-item .nav-link:hover {
-    color: var(--site-accent-color) !important;
+    color: #C0C0C0 !important;
 }
 
 .navbar-collapse {
@@ -256,535 +255,168 @@ html, body {
     max-width: calc(var(--center-box-max-width) * 1px);
     box-shadow: 0px 0px 50px rgba(0, 0, 0, 0.1);
     border-radius: 5px;
-    position: absolute;
-    left: 150%;
-    transform: translateX(-50%);
-    max-height: calc(100% - (var(--navbar-total-height) * 1px) - (var(--uniform-padding) * 1px));
-    overflow-y: auto;
+    margin: auto;
+    margin-top: 75px;
 }
 
-.center-page-box-info-container {
-    width: 100%;
-    padding-top: calc((var(--center-box-max-height) / var(--center-box-max-width)) * 100%);
-    position: relative;
-}
-
-.center-page-box-info {
-    position: absolute;
-    top: 0;
-    bottom: 0;
-    left: 0;
-    right: 0;
+.center-page-box {
     padding: calc(var(--center-box-padding) * 1px);
     display: flex;
     flex-direction: column;
     align-items: center;
-    max-width: 100%;
 }
 
-.center-page-box-info > .title-text {
+.center-page-box > .title-text {
     margin-bottom: 50px;
     margin-top: 0;
 }
 
-.center-page-box-info > * {
+.center-page-box > * {
     position: relative;
 }
-
-/* Center Page Box Responsive Styles */
-@media (max-width: 878px) {
-    .center-page-box-info {
-        padding: calc(var(--center-box-padding-medium) * 1px);
-    }
-}
-
-@media (max-width: 814px) {
-    .center-page-box {
-        margin: calc(var(--navbar-total-height) * 1px) auto calc(var(--uniform-padding) * 1px) auto;
-    }
-
-    .center-page-box-info-container {
-        padding-top: 0;
-        position: static;
-        height: 100%;
-        max-height: 100%;
-    }
-
-    .center-page-box-info,
-    .center-page-box-info > * {
-        position: static;
-    }
-
-    .center-page-box-info {
-        width: 100%;
-    }
-}
-
-/* End Center Page Box Responsive Styles */
 
 /* End Center Page Box Styles */
 
 /* Home Page Center Page Box Specific Styles */
-#home .center-page-box-info {
-    align-items: baseline;
+#about {
+    margin-top: 200px;
 }
 
-#home .large-home-text {
-    font-weight: 900;
-    font-size: 64px;
+#about .me-img-container {
+    height: var(--me-img-pct-height);
+    text-align: center;
 }
 
-#home .large-home-text span {
-    font-style: italic;
-    color: var(--site-accent-color);
+#about .me-img {
+    border-radius: 100%;
+    height: 100%;
+    max-height: 240px;
+    width: auto;
 }
 
-#home .home-button-grid {
-    margin-top: auto;
-    display: flex;
-    flex-wrap: wrap;
-    width: 100%;
+#about .name {
+    margin-bottom: 3px;
+    margin-top: 10px;
 }
 
-#home .home-button-grid a {
-    padding: 7px 30px;
-    color: white;
-    border-radius: 500px;
-    margin-right: 15px;
+#about .gender {
+    font-size: 14px;
+}
+
+#about .description {
     font-size: 18px;
+    font-weight: 300;
+    text-align: center;
+    max-width: 75%;
+}
+
+#about .social-media {
+    display: flex;
+    margin: auto 0;
+}
+
+#about .social-media .social-icon {
+    margin: 0 7.5px;
+    height: 25px;
+    display: block;
+}
+
+#about .social-media .social-icon:hover img {
+    transform: scale(1.1);
+}
+
+#about .social-media .social-icon img {
+    height: 100%;
+    transition: all 0.1s linear;
+}
+
+#about .contact-me-button {
+    background: rgba(74, 130, 246, 1);
+    border-radius: 500px;
+    font-size: 18px;
+    line-height: 21px;
+    color: #FFFFFF;
     text-decoration: none;
-    margin-top: 15px;
+    padding: 10px 26px;
+    margin-top: 20px;
     transition: all 0.2s linear;
 }
 
-#home .home-button-grid a:hover {
-    opacity: 0.8;
-}
-
-#home .home-button-grid a.quote {
-    background-color: var(--site-accent-color);
-}
-
-#home .home-button-grid a.insta {
-    background-color: #962FBF;
-}
-
-#home .home-button-grid a.linkedin {
-    background-color: #D62976;
-}
-
-#home .home-button-grid a.tiktok {
-    background-color: #FA7E1E;
+#about .contact-me-button:hover {
+    background: rgba(74, 130, 246, 0.8);
 }
 
 /* End Home Page Center Page Box Specific Styles */
 
 /* Home Page Center Page Box Specific Responsive Styles */
+@media (max-width: 878px) {
+    #about .description {
+        max-width: 85%;
+    }
+}
+
 @media (max-width: 814px) {
-    #home .home-button-grid {
-        margin-top: 8%;
-    }
-}
-
-@media (max-width: 695px) {
-    #home .large-home-text {
-        font-size: 50px;
+    #about .contact-me-button {
+        margin-top: 25px;
     }
 
-    #home .home-button-grid a {
-        font-size: 16px;
-        padding: 7px 20px;
-    }
-}
-
-@media (max-width: 589px) {
-    #home .large-home-text {
-        font-size: 40px;
-    }
-
-    #home .home-button-grid a {
-        font-size: 14px;
-        padding: 7px 20px;
-    }
-}
-
-@media (max-width: 563px) {
-    #home .home-button-grid {
-        justify-content: space-between;
-    }
-
-    #home .home-button-grid a {
-        font-size: 16px;
-        padding: 7px 20px;
-        margin-right: 0;
-    }
-
-    #home .home-button-grid a.quote {
-        width: 100%;
-        text-align: center;
-    }
-}
-
-@media (max-width: 487px) {
-    #home .large-home-text {
-        font-size: 30px;
-    }
-
-    #home .home-button-grid a {
-        font-size: 12px;
-        padding: 7px 15px;
-    }
-}
-
-@media (max-width: 405px) {
-    #home .large-home-text {
-        font-size: 25px;
-    }
-
-    #home .home-button-grid a {
-        font-size: 12px;
-        padding: 7px 15px;
-    }
-
-    #home .home-button-grid {
-        margin-top: 5%;
+    #about .me-img {
+        height: 158px;
     }
 }
 
 /* End Home Page Center Page Box Specific Responsive Styles */
 
-/* About Page Center Page Box Specific Styles */
-#about .about-content,
-#about .about-content .left-side,
-#about .about-content .right-side {
-    display: flex;
+/* Education Page Center Page Box Specific Styles */
+#education .large-box {
+    margin-bottom: 20px;
 }
 
-#about .about-content .left-side,
-#about .about-content .right-side {
-    flex-direction: column;
-}
-
-#about .about-content .left-side {
-    margin-right: 25px;
-    width: 100%;
-}
-
-#about .about-content .right-side p:first-child {
-    margin-bottom: auto;
-}
-
-#about .about-content .left-side .small-box {
-    display: flex;
-    align-items: center;
-    padding: 16px;
-    margin-bottom: 12px;
-}
-
-#about .about-content .left-side .small-box:last-child {
-    margin-bottom: 0;
-}
-
-#about a {
-    padding: 7px 30px;
-    color: white;
-    border-radius: 500px;
-    font-size: 18px;
-    margin-top: 15px;
-    text-decoration: none;
-    transition: all 0.2s linear;
-}
-
-#about a.quote {
-    background-color: var(--site-accent-color);
-}
-
-#about a.info {
-    background-color: #4A4A4A;
-    margin-left: auto;
-}
-
-#about a:hover {
-    opacity: 0.8;
-}
-
-#about .about-content .left-side p {
-    font-weight: 900;
-    font-size: 20px;
-    margin: 0;
-    line-height: 21px;
-}
-
-#about .about-content .right-side p {
-    font-weight: 700;
-    font-size: 26px;
-    margin: 0;
-    line-height: 29px;
-}
-
-#about .about-content p span {
-    color: var(--site-accent-color);
-}
-
-#about .about-content p span.caps {
-    text-transform: uppercase;
-    font-size: 24px;
-}
-
-#about .about-content p span.italics {
-    font-style: italic;
-}
-
-#about .about-content .right-side {
-    border-radius: 5px;
-    box-shadow: 0px 0px 4px rgba(0, 0, 0, 0.25);
-    padding: 16px;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-}
-
-#about .button-container {
-    margin: auto;
-    width: 100%;
-    display: flex;
-}
-
-/* End About Page Center Page Box Specific Styles */
-
-/* About Page Center Page Box Specific Responsive Styles */
-@media (max-width: 803px) {
-    #about .about-content .left-side p {
-        font-weight: 900;
-        font-size: 18px;
-        margin: 0;
-        line-height: 21px;
-    }
-    
-    #about .about-content .right-side p {
-        font-weight: 700;
-        font-size: 23px;
-        margin: 0;
-        line-height: 29px;
-    }
-}
-
-@media (max-width: 700px) {
-    #about .about-content {
-        flex-direction: column;
-    }
-
-    #about .about-content .left-side {
-        margin: 0;
-        margin-bottom: 15px;
-    }
-
-    #about .about-content .right-side p:first-child {
-        margin-bottom: 25px;
-    }
-}
-
-@media (max-width: 575px) {
-    #about .button-container {
-        flex-direction: column;
-    }
-
-    #about .button-container a {
-        width: 100%;
-        text-align: center;
-    }
-}
-
-/* End About Page Center Page Box Specific Responsive Styles */
-
-/* Services Page Center Page Box Specific Styles */
-#services .service-grid {
-    display: flex;
-    flex-wrap: wrap;
-    height: 100%;
-}
-
-#services .service-grid .service-item {
-    box-shadow: 0px 0px 4px rgba(0, 0, 0, 0.25);
-    border-radius: 5px;
-    margin: 0 20px;
-    padding: 30px 14px;
-    text-align: center;
-    width: 150px;
-    display: flex;
-    flex-direction: column;
-}
-
-#services .service-grid .service-item:first-child {
-    margin-left: 0;
-}
-
-#services .service-grid .service-item:last-child {
-    margin-right: 0;
-}
-
-#services .service-grid .service-item img {
-    height: 90px;
-    margin-bottom: 10px;
-}
-
-#services .service-grid .service-item h3 {
-    font-weight: 800;
-    font-size: 14px;
-}
-
-#services .service-grid .service-item p {
-    font-weight: 600;
-    font-size: 13px;
-    margin-top: auto;
-}
-
-/* End Services Page Center Page Box Specific Styles */
-
-/* Services Page Center Page Box Specific Responsive Styles */
-@media (max-width: 729px) {
-    #services .service-grid {
-        flex-direction: column;
-        width: 100%;
-        max-width: 481px;
-    }
-
-    #services .service-grid .service-item {
-        width: 100%;
-        margin: 20px 0;
-        padding-left: 20%;
-        padding-right: 20%;
-    }
-
-    #services .service-grid .service-item:first-child {
-        margin-top: 0;
-    }
-    
-    #services .service-grid .service-item:last-child {
-        margin-bottom: 0;
-    }
-}
-
-/* End Services Page Center Page Box Specific Responsive Styles */
-
-/* Portfolio Page Center Page Box Specific Styles */
-#portfolio .tabs {
-    margin-top: -41px;
-    margin-bottom: 16px;
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
-}
-
-#portfolio .tabs a {
-    text-decoration: none;
-    color: #C0C0C0;
-    font-weight: 900;
-    font-size: 14px;
-    margin: 0 7.5px;
-    transition: all 0.2s linear;
-}
-
-#portfolio .tabs a.active,
-#portfolio .tabs a:hover {
-    color: var(--site-accent-color);
-}
-
-#portfolio .tabs a:last-child {
-    margin-right: 0;
-}
-
-#portfolio .portfolio-grid {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-evenly;
-    width: 90%;
-    max-width: 570px;
-    padding: 10px;
-}
-
-#portfolio .portfolio-grid .item {
-    width: 150px;
-    position: relative;
-    box-shadow: 0px 0px 15px rgba(0, 0, 0, 0.5);
-    margin: 0 10px 15px 10px;
-    border-radius: 15px;
-}
-
-#portfolio .portfolio-grid .item .overlay {
-    position: absolute;
-    top: 0;
-    bottom: 0;
-    right: 0;
-    left: 0;
-    background-color: rgba(0, 0, 0, 0.75);
-    border-radius: 15px;
-    display: flex;
-    opacity: 0;
-    transition: opacity 0.2s linear;
-}
-
-#portfolio .portfolio-grid .item .overlay:hover {
-    opacity: 1;
-}
-
-#portfolio .portfolio-grid .item .overlay .text {
-    margin: auto 19px;
-}
-
-#portfolio .portfolio-grid .item .overlay p.title {
-    font-weight: bold;
-    font-size: 14px;
-    color: rgba(255, 255, 255, 0);;
-    margin: 0;
-    margin-bottom: 8px;
-    transition: all 0.2s linear;
-}
-
-#portfolio .portfolio-grid .item .overlay p.descr {
-    font-weight: 500;
-    font-size: 12px;
-    color: rgba(255, 255, 255, 0);
-    margin: 0;
-    transition: all 0.2s linear;
-}
-
-#portfolio .portfolio-grid .item .overlay:hover p {
-    color: rgba(255, 255, 255, 1);
-}
-
-#portfolio .portfolio-grid .item .overlay .ig-logo {
-    position: absolute;
-    bottom: 15px;
-    right: 15px;
-    width: 20px;
-    opacity: 0;
-    cursor: pointer;
-    transition: all 0.2s linear;
-}
-
-#portfolio .portfolio-grid .item .overlay .ig-logo:hover {
+#education .large-box:hover {
     transform: scale(1.05);
 }
 
-#portfolio .portfolio-grid .item .overlay:hover .ig-logo {
-    opacity: 1;
+#education .large-box {
+    cursor: pointer;
+    transition: all 0.1s linear;
 }
 
-#portfolio .portfolio-grid .item img {
-    width: 100%;
+#education .subtitle-text {
+    margin-bottom: 20px;
 }
 
-/*filter: drop-shadow(0px 0px 20px rgba(0, 0, 0, 0.5));*/
+#education .extracurricular-grid {
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
+    max-width: 481px;
+    height: var(--extracurriculars-grid-pct-height);
+}
 
-/* End Portfolio Page Center Page Box Specific Styles */
+#education .extracurricular-grid > * {
+    width: 46%;
+    margin-bottom: 20px;
+}
 
-/* Portfolio Page Center Page Box Specific Responsive Styles */
+/* End Education Page Center Page Box Specific Styles */
 
+/* Education Page Center Page Box Specific Responsive Styles */
+@media (max-width: 814px) {
+    #education .extracurricular-grid > * {
+        margin-bottom: 20px;
+    }
+}
 
-/* End Portfolio Page Center Page Box Specific Responsive Styles */
+@media (max-width: 620px) {
+    #education .extracurricular-grid > * {
+        width: 100%;
+    }
+}
 
-/* Press Page Center Page Box Specific Styles */
+/* End Education Page Center Page Box Specific Responsive Styles */
+
+/* Experience/Press Page Center Page Box Specific Styles */
+#experience .experiences-grid,
 #press .press-grid {
     display: flex;
     flex-direction: column;
@@ -793,8 +425,18 @@ html, body {
     align-items: center;
 }
 
+#experience .experiences-grid .large-box,
 #press .press-grid .large-box {
     margin-bottom: 20px;
+}
+
+#experience .experiences-grid .large-box:hover {
+    transform: scale(1.05);
+}
+
+#experience .experiences-grid .large-box {
+    cursor: pointer;
+    transition: all 0.1s linear;
 }
 
 #press .press-grid .large-box {
@@ -833,3 +475,51 @@ html, body {
 }
 
 /* End Experience/Press Page Center Page Box Specific Responsive Styles */
+
+/* Portfolio Page Center Page Box Specific Styles */
+#portfolio .portfolio-grid {
+    max-width: 481px;
+    display: flex;
+    flex-wrap: wrap;
+    padding: 8px;
+}
+
+#portfolio .portfolio-item {
+    box-shadow: 0px 0px 4px rgba(0, 0, 0, 0.25);
+    border-radius: 5px;
+    width: 100px;
+    height: 125px;
+    padding: 20px 9px 0 9px;
+    display: flex;
+    flex-direction: column;
+    margin: 0 8px 24px 8px;
+    align-items: center;
+    cursor: pointer;
+    transition: all 0.1s linear;
+}
+
+#portfolio .portfolio-item:hover {
+    transform: scale(1.1);
+}
+
+#portfolio .portfolio-item img {
+    width: 60px;
+}
+
+#portfolio .portfolio-item h3 {
+    font-weight: 500;
+    font-size: 14px;
+    margin: auto;
+    text-align: center;
+}
+
+/* End Portfolio Page Center Page Box Specific Styles */
+
+/* Portfolio Page Center Page Box Specific Responsive Styles */
+@media (max-width: 639px) {
+    #portfolio .portfolio-grid {
+        justify-content: space-around;
+    }
+}
+
+/* End Portfolio Page Center Page Box Specific Responsive Styles */
