--- a/css/style.css
+++ b/css/style.css
@@ -315,6 +315,7 @@ body {
     font-weight: bold;
     text-decoration: none;
     margin-top: 15px;
+    box-shadow: inset 0px 4px 4px rgba(0, 0, 0, 0.25);
     transition: all 0.2s linear;
 }
 
