--- a/css/style.css
+++ b/css/style.css
@@ -463,11 +463,8 @@ body {
 }
 
 #about .about-content .gallery-buttons {
-    display: flex;
-    align-items: flex-start;
-    flex-wrap: wrap;
-    justify-content: center;
     margin-top: 15px;
+    text-align: center;
 }
 
 #about .about-content .gallery-buttons button,
