--- a/css/style.css
+++ b/css/style.css
@@ -60,6 +60,81 @@ body {
     }
 }
 
+/* Modal Styles */
+.form-popup {
+    position: fixed;
+    opacity: 0;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    background: rgba(0, 0, 0, 0.4);
+    z-index: -1;
+    display: flex;
+    align-items: flex-start;
+    transition: all 0.2s linear;
+}
+
+.form-popup .popup {
+    margin: auto;
+    display: none;
+    max-width: 700px;
+    width: calc(100% - 100px);;
+    background: #FFFFFF;
+    border: 2px solid #FFFFFF;
+    box-sizing: border-box;
+    box-shadow: 0px 0px 50px rgba(79, 91, 213, 0.1);
+    border-radius: 5px;
+    flex-direction: column;
+    align-items: center;
+    padding: 100px;
+    transition: all 0.5s linear;
+}
+
+.form-popup.active {
+    opacity: 1;
+    z-index: 1;
+}
+
+.form-popup .popup img {
+    max-width: 100px;
+    margin-bottom: 15px;
+}
+
+.form-popup .popup .title {
+    font-weight: 900;
+    font-size: 28px;
+    text-align: center;
+    margin-bottom: 15px;
+}
+
+.form-popup .popup .subtitle {
+    font-weight: 900;
+    font-size: 14px;
+    text-align: center;
+    margin-bottom: 15px;
+}
+
+.form-popup .popup .description {
+    font-weight: bold;
+    font-size: 12px;
+    line-height: 14px;
+    text-align: center;
+    max-width: 246px;
+}
+
+.form-popup .popup .description span {
+    color: var(--site-accent-color);
+}
+
+@media (max-width: 500px) {
+    .form-popup .popup {
+        padding: 50px;
+    }
+}
+
+/* End Modal Styles */
+
 /* Large Box Styles */
 
 .large-box {
@@ -190,6 +265,7 @@ body {
     padding-bottom: 0;
     background: white;
     border-radius: 5px;
+    z-index: 0;
 }
 
 .navbar-brand {
